fixed hero on mobile

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -76,10 +76,10 @@ h1 {
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
 	.hero-items {
-		height: 323px;
+		height: auto;
 		padding: 0;
 		margin: 0;
-		padding-top: 40px;
+		padding-top: 100px;
 	}
 	h1 {
 		width: 204px;
